[post] fix some words

--- a/_posts/2022-06-10-thoughts.md
+++ b/_posts/2022-06-10-thoughts.md
@@ -27,7 +27,7 @@ title: 杂想
 
 而这件事我理解大家想通过情绪的释放，希望类似事件不会再发生。但是如果真的要解决这个问题，难道不应该是去复盘吗？难道不应该是收集足够多的信息来完完整整地复盘这个事件发生的前因后果么？从而找到更好的，能落地的解决办法么？
 
-仅凭一些大v的文章就可以说找到了这个事情的原因就是男权主义么？那也太敷衍了！
+仅凭一些大v的文章就可以说这个事情的原因就是xxxx么？那也太敷衍了！
 
 所以我希望大家对此应该做的是：
 
